dodanie możliwości zmiany decyzji uczestnictwa w spotkaniu
